add: learn skills

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,7 +31,7 @@ header {
 }
 
 /* skills */
-#skills_cards {
+#skills_cards, #learnSkills_cards {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 40px;
@@ -40,7 +40,7 @@ header {
     width: 100%;
 }
 
-#skills_cards .cards {
+#skills_cards .cards, #learnSkills_cards .cards {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,37 +55,30 @@ header {
 }
 
 @media (hover: hover) and (pointer: fine) {
-    #skills_cards .cards:hover {
+    #skills_cards .cards:hover, #learnSkills_cards .cards:hover {
         transform: scale(1.1) !important;
     }
 }
 
-#skills_cards .cards img {
+#skills_cards .cards img, #learnSkills_cards .cards img {
     width: 140px;
     height: 60px;
     object-fit: contain;
 }
 
-#skills_cards .cards h4 {
+#skills_cards .cards h4, #learnSkills_cards .cards h4 {
     margin: 0;
     text-decoration: none;
 }
 
-#skills_sentences {
+#skills_sentences, #learnSkills_sentences {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-#skills_sentences {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-#skills_sentences .cards {
+#skills_sentences .cards, #learnSkills_sentences .cards {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -96,53 +89,53 @@ header {
 	padding-left:0.2em;
 }
 
-#skills_sentences img {
+#skills_sentences img, #learnSkills_sentences img {
     width: 3rem;
     height: 3rem;
     object-fit: contain;
 }
 
-#skillsPC {
+.skillsPC {
     display: flex;
 }
 
-#skillsMobile {
+.skillsMobile {
     display: none;
 }
 
 @media (max-width: 1480px) {
-    #skills_cards {
+    #skills_cards, #learnSkills_cards {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media (max-width: 880px) { 
-    #skills_cards {
+    #skills_cards, #learnSkills_cards {
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
     }
 }
 
 @media (max-width: 550px) {
-    #skills_cards {
+    #skills_cards, #learnSkills_cards {
         grid-template-columns: repeat(1, 1fr);
     }
 
-    #skillsPC {
+    .skillsPC {
         display: none;
     }
 
-    #skillsMobile {
+    .skillsMobile {
         display: flex;
     }
 
-    #skills_cards .cards img {
+    #skills_cards .cards img, #learnSkills_cards .cards img {
         width: 160px;
         height: 80px;
         object-fit: contain;
     }
 
-    #skills_cards .cards h4 {
+    #skills_cards .cards h4, #learnSkills_cards .cards h4 {
         font-size: var(--type-heading-h3-font-size-mobile);
     }
 }
