Small-Update: Font changed, some CSS changed

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -83,11 +83,11 @@ body {
 }
 
 body button {
-    font-family: 'Galindo', sans-serif !important;
     cursor: pointer;
 }
 
 h1 {
+    font-family: 'Galindo', sans-serif !important;
     font-size: var(--type-heading-h1-font-size);
     margin: 0 auto;
     margin-top: 50px;
@@ -95,7 +95,9 @@ h1 {
     text-decoration: 3px underline var(--new_color_orange);
 }
 
-h2 {}
+h2 {
+    font-family: 'Galindo', sans-serif !important;
+}
 
 
 h3,
@@ -104,21 +106,30 @@ h3,
 }
 
 h3 {
+    font-family: 'Galindo', sans-serif !important;
     text-decoration: underline;
 }
 
 h4 {
+    font-family: 'Galindo', sans-serif !important;
     font-size: var(--type-heading-h4-font-size);
 }
 
 h5 {
+    font-family: 'Galindo', sans-serif !important;
     font-size: var(--type-heading-h5-font-size);
 }
 
 a {
+    font-family: 'Inter', sans-serif !important;
     color: var(--new_color_orange);
+    font-weight: 500;
 }
 
+p {
+    font-family: 'Inter', sans-serif !important;
+    font-weight: 500;
+}
 
 
 h1,
@@ -199,7 +210,7 @@ p {
 }
 
 #btnTop {
-    color: var(--new_color_orange);
+    color: white;
     bottom: 20px;
     right: 20px;
     position: fixed;
@@ -535,7 +546,7 @@ header img#moi {
     transform: scaleX(-1);
     max-width: 200px;
     transition: border-color 3s, border-radius 0s;
-    animation: 1.5s linear 0s infinite alternate moi_shadow;
+    /* animation: 1.5s linear 0s infinite alternate moi_shadow; */
 }
 
 header img#cassetete {
@@ -544,7 +555,7 @@ header img#cassetete {
     width: 100%;
     max-width: 200px;
     transition: border-color 3s, border-radius 0s;
-    animation: 1.5s linear 0s infinite alternate moi_shadow;
+    /* animation: 1.5s linear 0s infinite alternate moi_shadow; */
 }
 
 @keyframes moi_shadow {
@@ -694,7 +705,18 @@ header .divLeft {
     justify-content: space-between;
     align-items: start;
     flex-direction: column;
-    height: 100px;
+    min-height: 130px;
+    max-height: 200px;
+    background-color: #303030;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+    transition: border 200ms;
+}
+
+.techno:hover {
+border-color: white;
 }
 
 .divAccess {
@@ -702,7 +724,18 @@ header .divLeft {
     justify-content: space-between;
     align-items: start;
     flex-direction: column;
-    height: 100px;
+    min-height: 100px;
+    max-height: 150px;
+    background-color: #303030;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+    transition: border 200ms;
+}
+
+.divAccess:hover {
+border-color: white;
 }
 
 .all_tags {
@@ -755,7 +788,7 @@ ion-icon {
 }
 
 .AccessContent p {
-    font-size: 12px;
+    font-size: 16px;
     color: white;
     transition: color 0.4s;
 }
@@ -1077,7 +1110,7 @@ footer::before {
 
 footer .infos_footer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: start;
     gap: 20px;
     width: 90%;
