--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,10 @@
 /* --------------------------Main Index--------------------------- */
 
+.form_input {
+    padding: 5px;
+    border-radius: 5px;
+}
+
 #actu_projects {
     display: flex;
     justify-content: center;
